--- a/P1/src/main.html
+++ b/P1/src/main.html
@@ -20,7 +20,7 @@
                 <span class="self-center text-3xl font-bold whitespace-nowrap">Pet Pal</span>
             </a>
             <div class="flex md:order-2 items-center space-x-4">
-                <a href="../signup&login/login.html" class="text-black text-base hover:underline font-medium">Login</a>
+                <a href="./login.html" class="text-black text-base hover:underline font-medium">Login</a>
                 <!-- <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Sign Up</button> -->
 
                 <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar"
@@ -35,10 +35,10 @@
                     class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow w-44">
                     <ul class="py-2 text-sm text-gray-700" aria-labelledby="dropdownLargeButton">
                         <li>
-                            <a href="../signup&login/seeker_signup.html" class="block px-4 py-2 hover:bg-gray-100">Seeker</a>
+                            <a href="./seeker_signup.html" class="block px-4 py-2 hover:bg-gray-100">Seeker</a>
                         </li>
                         <li>
-                            <a href="../signup&login/first_shelter_signup.html"
+                            <a href="./first_shelter_signup.html"
                                 class="block px-4 py-2 hover:bg-gray-100">Shelter</a>
                         </li>
                     </ul>
@@ -68,7 +68,7 @@
                             class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:underline md:hover:bg-transparent md:p-0">About</a>
                     </li>
                     <li>
-                        <a href="../navbar/adopt_signup.html"
+                        <a href="./adopt_signup.html"
                             class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:underline md:hover:bg-transparent md:p-0">Adopt</a>
                     </li>
                     <li>
@@ -134,10 +134,10 @@
                 <!-- Card 1 -->
                 <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                    <a href="../pet_detail.html">
+                    <a href="./pet_detail.html">
                         <div class="relative w-full h-56">
                             <img class="w-full h-full object-cover rounded-t-lg"
-                                src="../resources/pets/DunDun2.png" alt="" />
+                                src="./resources/pets/DunDun2.png" alt="" />
                         </div>
                     </a>
                     <div class="p-5 flex flex-col">
@@ -164,10 +164,10 @@
                 
                 <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                    <a href="../pet_detail.html">
+                    <a href="./pet_detail.html">
                         <div class="relative w-full h-56">
                             <img class="w-full h-full object-cover rounded-t-lg"
-                                src="../resources/pets/boston_terrier.jpg" alt="" />
+                                src="./resources/pets/boston_terrier.jpg" alt="" />
                         </div>
                     </a>
                     <div class="p-5 flex flex-col">
@@ -193,10 +193,10 @@
                 <!-- Card 3 -->
                 <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                    <a href="../pet_detail.html">
+                    <a href="./pet_detail.html">
                         <div class="relative w-full h-56">
                             <img class="w-full h-full object-cover rounded-t-lg"
-                                src="../resources/pets/cat.jpg" alt="" />
+                                src="./resources/pets/cat.jpg" alt="" />
                         </div>
                     </a>
                     <div class="p-5 flex flex-col">
@@ -222,10 +222,10 @@
                 <!-- Card 4 -->
                 <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                    <a href="../pet_detail.html">
+                    <a href="./pet_detail.html">
                         <div class="relative w-full h-56">
                             <img class="w-full h-full object-cover rounded-t-lg"
-                                src="../resources/pets/australian_terrier.png" alt="" />
+                                src="./resources/pets/australian_terrier.png" alt="" />
                         </div>
                     </a>
                     <div class="p-5 flex flex-col">
@@ -251,7 +251,7 @@
         </div>
         <!-- See More button -->
         <div class="md:mt-2 xl:mt-4 text-center">
-            <a href="../search.html">
+            <a href="./search.html">
                 <button type="button"
                     class="text-white bg-gray-700 hover:bg-gray-900 focus:outline-none focus:ring-2 focus:ring-gray-300 font-medium rounded-lg text-base px-10 py-2.5 mr-2 mb-2">See
                     More</button>
@@ -275,7 +275,7 @@
                 <p class="mb-6 font-light text-gray-500 md:text-lg"><span class="font-bold">Pet Pal</span> is a
                     passionate community dedicated to connecting pets with loving families. We believe that every pet
                     deserves a forever home, and we are committed to making that happen.</p>
-                <a href="../navbar/adopt_signup.html"
+                <a href="./adopt_signup.html"
                     class="inline-flex font-medium items-center text-white bg-gray-700 hover:bg-gray-900 focus:ring-2 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
                     Get started
                     <svg class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
@@ -487,62 +487,7 @@
         </div>
     </section>
 
-
-    <!-- Footer (You can customize it as needed) -->
-    <footer class="bg-gray-200 rounded-lg shadow">
-        <div class="w-full max-w-screen-xl mx-auto p-4 py-8 lg:py-12 lg:pb-16">
-            <div class="sm:flex sm:items-center sm:justify-between">
-                <a href="./main.html" class="flex items-center mb-4 sm:mb-0">
-                    <!-- <img src="https://flowbite.com/docs/images/logo.svg" class="h-8 mr-3" alt="Flowbite Logo" /> -->
-                    <span class="self-center text-2xl font-semibold whitespace-nowrap">Pet Pal</span>
-                </a>
-                <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 ">
-                    <li>
-                        <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
-                    </li>
-                    <li>
-                        <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
-                    </li>
-                    <li>
-                        <a href="#" class="mr-4 hover:underline md:mr-6 ">Licensing</a>
-                    </li>
-                    <li>
-                        <a href="#" class="hover:underline">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <hr class="my-6 border-gray-200 sm:mx-auto lg:my-6" />
-            <div class="sm:flex sm:items-center sm:justify-between">
-                <span class="text-sm text-gray-500 sm:text-center">© 2023 <a href="https://flowbite.com/"
-                        class="hover:underline">
-                        PetPal™</a>. All Rights Reserved.
-                </span>
-                <div class="flex mt-4 space-x-5 sm:justify-center sm:mt-0">
-                    <a href="#" class="text-gray-500 hover:text-gray-900">
-                        <svg class="w-4 h-4 md:w-5 md:h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                            fill="currentColor" viewBox="0 0 8 19">
-                            <path fill-rule="evenodd"
-                                d="M6.135 3H8V0H6.135a4.147 4.147 0 0 0-4.142 4.142V6H0v3h2v9.938h3V9h2.021l.592-3H5V3.591A.6.6 0 0 1 5.592 3h.543Z"
-                                clip-rule="evenodd" />
-                        </svg>
-                        <span class="sr-only">Facebook page</span>
-                    </a>
-                    <a href="#" class="text-gray-500 hover:text-gray-900">
-                        <svg class="w-4 h-4 md:w-5 md:h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                            fill="currentColor" viewBox="0 0 20 17">
-                            <path fill-rule="evenodd"
-                                d="M20 1.892a8.178 8.178 0 0 1-2.355.635 4.074 4.074 0 0 0 1.8-2.235 8.344 8.344 0 0 1-2.605.98A4.13 4.13 0 0 0 13.85 0a4.068 4.068 0 0 0-4.1 4.038 4 4 0 0 0 .105.919A11.705 11.705 0 0 1 1.4.734a4.006 4.006 0 0 0 1.268 5.392 4.165 4.165 0 0 1-1.859-.5v.05A4.057 4.057 0 0 0 4.1 9.635a4.19 4.19 0 0 1-1.856.07 4.108 4.108 0 0 0 3.831 2.807A8.36 8.36 0 0 1 0 14.184 11.732 11.732 0 0 0 6.291 16 11.502 11.502 0 0 0 17.964 4.5c0-.177 0-.35-.012-.523A8.143 8.143 0 0 0 20 1.892Z"
-                                clip-rule="evenodd" />
-                        </svg>
-                        <span class="sr-only">Twitter page</span>
-                    </a>
-
-                </div>
-            </div>
-        </div>
-    </footer>
-
-
+    <script src="footer_signup.js"></script>
     <!-- need to add for the dropdown menu to work -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
 </body>
