--- a/P1/src/shelter_detail_user_view.html
+++ b/P1/src/shelter_detail_user_view.html
@@ -6,12 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pet Shelter Detail</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" />
     <script src="https://cdn.tailwindcss.com/3.3.0"></script>
-
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
-    <!-- font awseome icon -->
-    <script src="https://kit.fontawesome.com/199027eb42.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
 </head>
 
 <body>
@@ -117,7 +113,8 @@
             loving companion!</h2>
 
         <section id="shelter-pets" class="flex justify-center w-full p-4">
-            <div class="flex justify-center flex-col md:flex-row m-4 container md:max-w-full  bg-white rounded-lg shadow-md gap-4">
+            <div
+                class="flex justify-center flex-col md:flex-row m-4 container md:max-w-full  bg-white rounded-lg shadow-md gap-4">
                 <!-- TODO not collapsed by default when screen size is at least medium -->
                 <div id="drawer-disabled-backdrop" class="hidden flex z-40 p-4 w-full md:w-[300px] flex-none
                           -translate-x-full bg-white dark:bg-gray-800" tabindex="-1"
