--- a/P1/src/main_after_login.html
+++ b/P1/src/main_after_login.html
@@ -39,7 +39,7 @@
                         <a href="#" class="flex px-4 py-3 hover:bg-gray-100">
 
                         <div class="w-full pl-3">
-                            <div class="text-gray-500 text-sm mb-1.5 ">New message from <span class="font-semibold text-gray-900">Toronto Adoption Community</span>: "Hello! DunDun is available for adoption!"</div>
+                            <div class="text-gray-500 text-sm mb-1.5 ">New message from <span class="font-semibold text-gray-900">Toronto Adoption Community</span>: "We've received your application for DunDun!"</div>
                             <div class="text-xs text-blue-600">a few moments ago</div>
                         </div>
                         </a>
