--- a/P1/src/first_shelter_signup.html
+++ b/P1/src/first_shelter_signup.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="z-10 w-full md:fixed">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="../main/main.html" class="flex items-center">
+            <a href="./main.html" class="flex items-center">
                 <span class="self-center text-3xl font-bold whitespace-nowrap">Pet Pal</span>
             </a>
             </div>
@@ -59,18 +59,18 @@
                         <div class="mb-4">
                             <p class="block mb-2 text-sm font-medium text-gray-900">Upload Shelter Pictures</p>
                             <div class="flex justify-center mb-2">
-                                <div class="mr-4">
+                                <!-- <div class="mr-4">
                                     <div id="tooltip-jese" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
                                         <div class="tooltip-arrow" data-popper-arrow></div>
                                     </div>
-                                    <img data-tooltip-target="tooltip-jese" class="w-14 h-14 sm:w-16 sm:h-16 rounded" src="../resources/shelter/shelter_1.png" alt="Medium avatar">
+                                    <img data-tooltip-target="tooltip-jese" class="w-14 h-14 sm:w-16 sm:h-16 rounded" src="./resources/shelter/shelter_1.png" alt="Medium avatar">
                                 </div>
                                 <div class="mr-4">
-                                    <img data-tooltip-target="tooltip-roberta" class="w-14 h-14 sm:w-16 sm:h-16 rounded" src="../resources/shelter/shelter_2.png" alt="Medium avatar">
+                                    <img data-tooltip-target="tooltip-roberta" class="w-14 h-14 sm:w-16 sm:h-16 rounded" src="./resources/shelter/shelter_2.png" alt="Medium avatar">
                                 </div>
                                 <div class="mr-4">
-                                    <img data-tooltip-target="tooltip-bonnie" class="w-14 h-14 sm:w-16 sm:h-16 rounded" src="../resources/shelter/shelter_3.jpg" alt="Medium avatar">
-                                </div>
+                                    <img data-tooltip-target="tooltip-bonnie" class="w-14 h-14 sm:w-16 sm:h-16 rounded" src="./resources/shelter/shelter_3.jpg" alt="Medium avatar">
+                                </div> -->
                                 <div>
                                     <label for="dropzone-file" class="flex flex-col items-center justify-center w-14 h-14 sm:w-16 sm:h-16 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-gray-50 hover:bg-gray-100">
                                         <div class="flex flex-col items-center">
