--- a/P1/src/sec_shelter_signup.html
+++ b/P1/src/sec_shelter_signup.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="z-10 w-full md:fixed">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="../main/main.html" class="flex items-center">
+            <a href="./main.html" class="flex items-center">
                 <span class="self-center text-3xl font-bold whitespace-nowrap">Pet Pal</span>
             </a>
             </div>
@@ -92,10 +92,14 @@
                             </button>
                         </div>
 
-                        <button type="submit" class="text-white mb-5 bg-blue-700 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-medium w-full sm:w-full px-5 py-2.5 text-center">
-                            <a href="./shelter_signup_error.html">Sign Up</a> 
+                        <a href="./shelter_signup_error.html">
+                            <!-- apparently later change this to button -->
+                            <div class="text-white mb-5 bg-blue-700 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-medium w-full sm:w-full px-5 py-2.5 text-center">
+                            <!-- later give this type="submit" -->
+                            Sign Up
                             <!-- when get rid of the a tag inside button, will not proceed to main after login -->
-                        </button>
+                            </div>
+                        </a> 
 
                         <!-- After Sign Up Button -->
                         <div class="mb-2">
