--- a/P1/src/forgot_pw.html
+++ b/P1/src/forgot_pw.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="z-10 w-full md:fixed">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="../main/main.html" class="flex items-center">
+            <a href="./main.html" class="flex items-center">
                 <span class="self-center text-3xl font-bold whitespace-nowrap">Pet Pal</span>
             </a>
             </div>
